Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13534

Note markers aren't always shown when events are only partly visible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.3.1
    • Qt Creator 3.3.0-beta1
    • QML Profiler
    • None
    • 7659159017d09779beaf13f88aa4973835e8d19b

    Description

      By scrolling horizontally you can reach positions where a large event is shown but its note marker is outside the screen. That is fairly confusing.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes