src/plugins/qmlprofiler/timelinerenderer.cpp
@@ -130,8 +130,8 @@ inline void TimelineRenderer::getItemXExtent(int modelIndex, int i, int &current
     if (rawWidth < MinimumItemWidth) {
         currentX -= static_cast<int>((MinimumItemWidth - rawWidth) / 2);
         itemWidth = MinimumItemWidth;
-    } else if (rawWidth > m_spacedDuration) {
-        itemWidth = static_cast<int>(m_spacedDuration);
+    } else if (rawWidth > m_spacedDuration - static_cast<qreal>(currentX - OutOfScreenMargin)) {
+        itemWidth = static_cast<int>(m_spacedDuration) - currentX  + OutOfScreenMargin;
     } else {
         itemWidth = static_cast<int>(rawWidth);
     }
